--- a/m4d/Views/Shared/_head.cshtml
+++ b/m4d/Views/Shared/_head.cshtml
@@ -2,11 +2,14 @@
 @using m4d.ViewModels
 @using m4dModels
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.FeatureManagement
 @using Newtonsoft.Json
+
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery _xsrf
 @inject UserManager<ApplicationUser> _userManager
 @inject ISearchServiceManager _searchService
 @inject IConfiguration _configuration
+@inject IFeatureManager _featureManager
 
 @{
     var userAgent = Context.Request.Headers.UserAgent.ToString().ToLower();
@@ -107,7 +110,7 @@
     };
 </script>
 
-@if (GlobalState.UseGTM(_configuration))
+@if (await _featureManager.IsEnabledAsync(FeatureFlags.GoogleTagManager))
 {
     <!-- Google Tag Manager -->
     <script>
@@ -119,7 +122,7 @@
     <!-- End Google Tag Manager -->
 }
 
-@if (GlobalState.UseGoogleTags(_configuration))
+@if (await _featureManager.IsEnabledAsync(FeatureFlags.GoogleTags))
 {
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2MCXRT7ZDV"></script>
