Add a reminder alert to ask users to upgrae to premium

--- a/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/m4d/Views/ApplicationUsers/Index.cshtml
@@ -373,10 +373,14 @@
         user = item.User.UserName
     }),
         @Html.ActionLink("Playlists", "Index", "Playlist", new
-{
+    {
         type = PlayListType.SongsFromSpotify,
         user = item.User.UserName
-    })
+    }),
+        @Html.ActionLink("ClearPremium", "ClearPremium", new
+    {
+        id = item.User.Id
+    }),
 
         @*
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
