--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -6,7 +6,7 @@
 @using m4d.ViewModels
 @using m4dModels;
 @inject IConfiguration Configuration
-@inject IFeatureManager FeatureManager
+@inject IFeatureManagerSnapshot FeatureManager
 @inject UserManager<ApplicationUser> _userManager
 @addTagHelper *, Owl.reCAPTCHA
 @model ContributeModel
