--- a/m4d/Views/Shared/_bs5-Layout.cshtml
+++ b/m4d/Views/Shared/_bs5-Layout.cshtml
@@ -5,7 +5,7 @@
 @using Microsoft.FeatureManagement
 @inject IViteManifest Manifest
 @inject IConfiguration _configuration
-@inject IFeatureManager _featureManager
+@inject IFeatureManagerSnapshot _featureManager
 
 @{
     var help = "https://music4dance.blog/music4dance-help/";
