--- a/m4d/Views/Shared/_vue-Layout.cshtml
+++ b/m4d/Views/Shared/_vue-Layout.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.FeatureManagement
 
 @inject IConfiguration _configuration
-@inject IFeatureManager _featureManager
+@inject IFeatureManagerSnapshot _featureManager
 
 <!DOCTYPE html>
 <html>
