--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -6,7 +6,7 @@
 @using System
 @inject ISearchServiceManager SearchService
 @inject IConfiguration Configuration
-@inject IFeatureManager FeatureManager
+@inject IFeatureManagerSnapshot FeatureManager
 
 @{
     ViewBag.Title = "Logging";
