--- a/m4d/Views/Shared/_head.cshtml
+++ b/m4d/Views/Shared/_head.cshtml
@@ -9,7 +9,7 @@
 @inject UserManager<ApplicationUser> _userManager
 @inject ISearchServiceManager _searchService
 @inject IConfiguration _configuration
-@inject IFeatureManager _featureManager
+@inject IFeatureManagerSnapshot _featureManager
 
 @{
     var userAgent = Context.Request.Headers.UserAgent.ToString().ToLower();
@@ -19,25 +19,28 @@
         help = string.Format("https://music4dance.blog/music4dance-help/{0}/", ViewBag.Help);
     }
 
-    var roles = DanceMusicCoreService.UserRoles(User);
-    var userExpiration = ViewData["UserExpiration"] as UserExpiration;
-    if (userExpiration == null)
+    var userMetadata = ViewData["UserMetadata"] as UserMetadata;
+    if (userMetadata == null)
     {
         // This is the case for account pages where I can't get to the controller
         //  maybe I should try setting a global controller
-        userExpiration = await UserExpiration.Create(User.Identity.Name, _userManager);
+        userMetadata = await UserMetadata.Create(User.Identity.Name, _userManager);
     }
-    var user = userExpiration.User;
+    var noWarnings = ViewData.TryGetValue("NoWarnings", out var noWarningsObj) && (noWarningsObj as bool?).Value;
+    var hideAds = noWarnings || ViewData.TryGetValue("HideAds", out var hideAdsObj) && (hideAdsObj as bool?).Value;
+    var user = userMetadata.User;
     var userName = user?.UserName ?? "";
+    var isPremium = User.IsInRole("premium");
     var userId = user?.Privacy == 0 ? user?.Id : "";
-    var expiration = userExpiration.ExpirationString;
+    var expiration = noWarnings ? null : userMetadata.Expiration;
+    var started = userMetadata.Started;
     var searchIndex = _searchService.GetInfo().Abbr;
-    var hideAds = ViewData.TryGetValue("HideAds", out var hideAdsObj) && (hideAdsObj as bool?).Value;
     var hasIcons = ViewData.TryGetValue("HasIcons", out var hasIconsObj) && (hasIconsObj as bool?).Value;
     var styleModifier = hasIcons ? "wicons" : "";
     var styleSheet = ViewData.ContainsKey("NoSiteCss") ? null : $"/css/site{styleModifier}.css";
     var marketing = GlobalState.GetMarketing(user, Context.Request.Path);
     var marketingMessage = marketing.Enabled ? marketing.Banner : String.Empty;
+    var customerReminder = !noWarnings && !isPremium && userMetadata.User != null && await _featureManager.IsEnabledAsync(FeatureFlags.CustomerReminder);
 }
 
 @functions{
@@ -47,7 +50,7 @@
     }
 }
 
-@if (!hideAds && !User.IsInRole("premium") && !userAgent.Contains("googlebot") )
+@if (!hideAds && !isPremium && !userAgent.Contains("googlebot") )
 {
     <!-- Google Adsense Verifier -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -98,15 +101,19 @@
 
 <script>
     var menuContext = {
-    helpLink: '@help',
-    userName: '@userName',
-    userId: '@userId',
-    roles: @Html.Raw(JsonConvert.SerializeObject(roles)),
-    indexId: '@searchIndex',
-    expiration: @Html.Raw(expiration == null ? "undefined" : $"new Date('{expiration}')"),
-    updateMessage: '@GlobalState.UpdateMessage',
-    marketingMessage: "@Html.Raw(@marketingMessage)",
-    xsrfToken: '@GetAntiXsrfRequestToken()'
+        helpLink: '@help',
+        userName: '@userName',
+        userId: '@userId',
+        roles: @Html.Raw(JsonConvert.SerializeObject(userMetadata.Roles)),
+        indexId: '@searchIndex',
+        expiration: @Html.Raw(string.IsNullOrWhiteSpace(expiration) ? "undefined" : $"new Date('{expiration}')"),
+        started: @Html.Raw(string.IsNullOrWhiteSpace(started) ? "undefined" : $"new Date('{started}')"),
+        hitCount: @userMetadata.HitCount,
+        level: '@userMetadata.Level',
+        updateMessage: '@GlobalState.UpdateMessage',
+        marketingMessage: "@Html.Raw(@marketingMessage)",
+        customerReminder: @(customerReminder && !hideAds ? "true" : "false"),
+        xsrfToken: '@GetAntiXsrfRequestToken()'
     };
 </script>
 
