--- a/m4d/Views/Shared/_head.cshtml
+++ b/m4d/Views/Shared/_head.cshtml
@@ -50,7 +50,7 @@
     }
 }
 
-@if (!hideAds && !isPremium && !userAgent.Contains("googlebot") )
+@if (!hideAds && !isPremium &&!customerReminder && !userAgent.Contains("googlebot") )
 {
     <!-- Google Adsense Verifier -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
