Clean up SongIndexCode and Scaffold ExperimentalSongIndex

--- a/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/m4d/Views/Admin/InitializationTasks.cshtml
@@ -23,6 +23,12 @@ ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
                 id = "SongIndexTest"
             }, null)
     </li>
+    <li>
+        SongIndexExperimental: @Html.ActionLink("Reset", "ResetSearchIdx", new
+            {
+                id = "SongIndexExperimental"
+            }, null)
+    </li>
 </ul>
 
 <h3> Initializiation Tasks</h3>
