--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -109,6 +109,7 @@ using (Html.BeginForm("LoadIdx", "Admin", FormMethod.Post, new
     <br/>
     <input type="submit" name="idxName" id="SongIndexProd" value="SongIndexProd" />
     <input type="submit" name="idxName" id="SongIndexTest" value="SongIndexTest" />
+    <input type="submit" name="idxName" id="SongIndexExperimental" value="SongIndexExperimental" />
     }
 
     <h3>Update the Index</h3>
@@ -124,6 +125,7 @@ using (Html.BeginForm("LoadIdx", "Admin", FormMethod.Post, new
     <br/>
     <input type="submit" name="idxName" id="SongIndexProd" value="SongIndexProd" />
     <input type="submit" name="idxName" id="SongIndexTest" value="SongIndexTest" />
+        <input type="submit" name="idxName" id="SongIndexExperimental" value="SongIndexExperimental" />
     }
 
     <hr/>
@@ -267,6 +269,7 @@ using (Html.BeginForm("BackupDelta", "Admin", FormMethod.Post, new
         <br />
         <input type="submit" name="idxName" id="SongIndexProd" value="SongIndexProd" />
         <input type="submit" name="idxName" id="SongIndexTest" value="SongIndexTest" />
+        <input type="submit" name="idxName" id="SongIndexExperimental" value="SongIndexExperimental" />
     }
 
 }
