--- a/m4d/Views/Song/ExportPlaylist.cshtml
+++ b/m4d/Views/Song/ExportPlaylist.cshtml
@@ -1,10 +1,12 @@
 ﻿@using m4dModels
 @model m4dModels.ExportInfo
 
+@inject ISearchServiceManager _searchService
+
 @{
     ViewData["HasIcons"] = true;
 ViewBag.Title = "Export Playlist";
-var filter = new SongFilter(Model.Filter);
+var filter = _searchService.GetSongFilter(Model.Filter);
 var canCreate = Model.IsAuthenticated && (Model.IsPremium || Model.IsSelf);
 var returnUrl = $"/song/exportplaylist?filter={filter}";
 }
