Move to a current/next schema for most of the code (rathre than version #s)

--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -163,7 +163,9 @@ ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
     }
 </ul>
 <p><b>Enviroment:</b> @SearchService.RawEnvironment</p>
-<p><b>DB Version:</b> @SearchService.Version<p/>
+<p><b>DB Code Version:</b> @SearchService.CodeVersion
+<p><b>DB Config Version:</b> @SearchService.ConfigVersion
+<p />
 
 <hr />
 <h3>Tag Duplicates</h3>
