--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -10,14 +10,11 @@
 
 @{
     ViewBag.Title = "Logging";
-ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
+    ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
 }
 
 <p>Start Time = <b>@SpiderManager.StartTime.ToString(CultureInfo.CurrentCulture)</b></p>
 <p>Up Time = <b>@SpiderManager.UpTime.ToString()</b></p>
-
-<hr />
-<h3>Structured Schema =  @Html.ActionLink(@SongFilter.StructuredSchema.ToString(), "ToggleStructuredSchema", "Admin")</h3>
 
 <hr />
 <h3>Environment</h3>
@@ -29,16 +26,16 @@ ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
         <b>Current Directory:</b>@Environment.CurrentDirectory
     </li>
     <li>
-        <b>OSVersion:</b>@Environment.OSVersion
+        <b>OSVersion:</b> @Environment.OSVersion
     </li>
     <li>
-        <b>UserDomainName:</b>@Environment.UserDomainName
+        <b>UserDomainName:</b> @Environment.UserDomainName
     </li>
     <li>
-        <b>UserName:</b>@Environment.UserName
+        <b>UserName:</b> @Environment.UserName
     </li>
     <li>
-        <b>Version:</b>@Environment.Version
+        <b>Version:</b> @Environment.Version
     </li>
     <li><b>Build Flavor:</b> @(ViewBag.Debug ? "Debug" : "Release")</li>
     <li>
@@ -152,21 +149,23 @@ ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
 <h3>Search Index: @ViewBag.SearchIdx</h3>
 <p>Source = @ViewBag.StatsUpdateSource, Time=@ViewBag.StatsUpdateTime</p>
 <ul>
-    @foreach (var id in SearchService.GetAvailableIds())
-{
-    if (SearchService.DefaultId == id)
-    {
-        continue;
-    }
-    <li>
-            @Html.ActionLink(id, "SetSearchIdx", "Admin", new
+    @foreach (var id in SearchService.GetAvailableIds()){
+        if (SearchService.DefaultId == id)
         {
-            id
-        }, null)
+            continue;
+        }
+        <li>
+                @Html.ActionLink(id, "SetSearchIdx", "Admin", new
+            {
+                id
+            }, null)
         </li>
-}
-    <li>Enviroment: @SearchService.RawEnvironment</li>
+    }
 </ul>
+<p><b>Enviroment:</b> @SearchService.RawEnvironment</p>
+<p><b>DB Code Version:</b> @SearchService.CodeVersion
+<p><b>DB Config Version:</b> @SearchService.ConfigVersion
+<p />
 
 <hr />
 <h3>Tag Duplicates</h3>
