--- a/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/m4d/Views/Admin/InitializationTasks.cshtml
@@ -3,29 +3,28 @@
 @using m4dModels
 @using Microsoft.EntityFrameworkCore.Infrastructure.Internal
 
+@inject ISearchServiceManager SearchService
+
 @{
     ViewBag.Title = "InitializationTasks";
-ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
+    ViewBag.BreadCrumbs = BreadCrumbItem.BuildAdminTrail(ViewBag.Title);
 }
 
 <h3>Search Indexing</h3>
 <ul>
-    <li>Default: @Html.ActionLink("Reset", "ResetSearchIdx")</li>
-    <li>
-        SongIndexProd: @Html.ActionLink("Reset", "ResetSearchIdx", new
-            {
-                id = "SongIndexProd"
-            }, null)
-    </li>
-    <li>
-        SongIndexTest: @Html.ActionLink("Reset", "ResetSearchIdx", new
-            {
-                id = "SongIndexTest"
-            }, null)
-    </li>
+    @foreach (var id in SearchService.GetAvailableIds()){
+        <li>
+            @id: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = id }, null)
+        </li>
+    }
+
 </ul>
 
-<h3> Initializiation Tasks</h3>
+@if (SearchService.HasNextVersion && !SearchService.NextVersion) {
+    @Html.ActionLink($"Update {SearchService.DefaultId}", "UpdateSearchIdx")
+}
+
+<h3 class="mt-3"> Initializiation Tasks</h3>
 <ul>
     <li>
         Reload Song Stats
