Fix bulk file upload

--- a/m4d/Views/Admin/UploadCatalog.cshtml
+++ b/m4d/Views/Admin/UploadCatalog.cshtml
@@ -84,7 +84,7 @@ if (ViewData.ContainsKey("Tags") && !string.IsNullOrWhiteSpace(ViewBag.Tags))
     </div>
     <div class="form-group">
         <span class="control-label">File:</span>
-        <input type="file" name="FileUpload"/>
+        <input type="file" name="file"/>
     </div>
 
     <input type="submit" name="UploadCatalog" id="Submit" value="Upload"/>
