--- a/m4d/ClientApp/src/scss/styles.scss
+++ b/m4d/ClientApp/src/scss/styles.scss
@@ -1,5 +1,7 @@
+// Import Bootstrap functions first (needed for color functions)
 @import "bootstrap/scss/functions";
 
+// Define all custom variables before importing Bootstrap variables
 $dance-primary: #001671;
 $dance-light: lighten($dance-primary, 40%);
 $primary: $dance-primary;
@@ -11,9 +13,6 @@ $navbar-dark-active-color: rgba(white, 0.9);
 $navbar-dark-disabled-color: rgba(white, 0.4);
 $navbar-dark-icon-color: $navbar-dark-color;
 
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/variables-dark";
-
 $custom-theme-colors: (
   music: #24a092,
   tempo: #001671,
@@ -24,8 +23,14 @@ $custom-theme-colors: (
   dance: #ff9900,
 );
 
+// Import Bootstrap variables and merge with custom theme colors
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
+
+// Merge custom theme colors with Bootstrap theme colors
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
 
+// Import Bootstrap maps, mixins, and utilities
 @import "bootstrap/scss/maps";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/utilities";
@@ -69,8 +74,7 @@ $theme-colors: map-merge($theme-colors, $custom-theme-colors);
 // Utilities
 @import "bootstrap/scss/utilities/api";
 
-@import "bootstrap-vue-next/dist/bootstrap-vue-next.css";
-
+// Custom styles
 .nav-subitem {
   padding-left: 1rem;
 }
