--- a/m4d/Views/Shared/_vue-Layout.cshtml
+++ b/m4d/Views/Shared/_vue-Layout.cshtml
@@ -7,7 +7,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" vite-href="style.css" asp-append-version="true" />
+        <environment exclude="Development">
+            <link rel="stylesheet" vite-href="style.css" asp-append-version="true" />
+        </environment>
         @await RenderSectionAsync("styles", false)
         <script type="importmap"></script>
         <partial name="_head"/>
