Text and warning fixes

--- a/m4d/Views/Shared/_bs5-Layout.cshtml
+++ b/m4d/Views/Shared/_bs5-Layout.cshtml
@@ -21,9 +21,10 @@
 }
 <html>
 <head>
-    <environment exclude="Development">
+    @if (!_configuration.UseVite())
+    {
         <link rel="stylesheet" vite-href="style.css" asp-append-version="true" />
-    </environment>
+    }
     @await RenderSectionAsync("styles", false)
     <link rel="stylesheet" vite-href="@entry" asp-append-version="true" />
     <script type="importmap"></script>
