--- a/m4d/Views/UsageLog/Pages.cshtml
+++ b/m4d/Views/UsageLog/Pages.cshtml
@@ -1,15 +1,15 @@
-﻿@using m4d.ViewModels
-@model m4d.Controllers.UsageModel
+@using m4d.ViewModels
+@model m4d.Controllers.PageUsageModel
 
 @{
-    ViewBag.Title = "Usage Log - High Usage";
+    ViewBag.Title = "Usage Log - Pages";
     var items = Model.Summaries;
 
     var breadCrumbs = new List<BreadCrumbItem>
     {
         BreadCrumbItem.AdminItem,
         new() { Title = "Usage Log", Link = "/usagelog" },
-        new() { Title = "High Usage", Active = true },
+        new() { Title = "Pages", Active = true },
     };
 
     ViewData["BreadCrumbs"] = breadCrumbs;
@@ -24,7 +24,7 @@
     <div class="col">
         @Html.ActionLink("High Usage", "Index", "UsageLog", null, new
             {
-                @class = "btn btn-primary",
+                @class = "btn btn-secondary",
                 role = "button"
             })
     </div>
@@ -38,7 +38,7 @@
     <div class="col">
         @Html.ActionLink("Pages", "Pages", "UsageLog", null, new
             {
-                @class = "btn btn-secondary",
+                @class = "btn btn-primary",
                 role = "button"
             })
     </div>
@@ -46,39 +46,21 @@
 
 <div class="row my-1">
     <div class="col">
-        Days:
+        URL Mode:
     </div>
     <div class="col">
-        @Html.ActionLink("Today", "DayLog", "UsageLog", new
+        @Html.ActionLink("Full URL", "Pages", "UsageLog", new { useBaseUrl = false }, new
             {
-                day = 0
-            }, 
-            new
-            {
-                @class = "btn btn-secondary",
+                @class = Model.UseBaseUrl ? "btn btn-secondary" : "btn btn-primary",
                 role = "button"
             })
     </div>
     <div class="col">
-        @Html.ActionLink("Yesterday", "DayLog", "UsageLog", new
+        @Html.ActionLink("Base URL Only", "Pages", "UsageLog", new { useBaseUrl = true }, new
             {
-                day = -1
-            }, 
-            new {
-                @class = "btn btn-secondary",
+                @class = Model.UseBaseUrl ? "btn btn-primary" : "btn btn-secondary",
                 role = "button"
             })
-    </div>
-    <div class="col">
-        @Html.ActionLink("-2", "DayLog", "UsageLog", new
-        {
-            day = -2
-        },
-        new
-        {
-            @class = "btn btn-secondary",
-            role = "button"
-        })
     </div>
 </div>
 
@@ -99,53 +81,44 @@
     </div>
 </div>
 
-
-
 <div class="row">
     <div class="col">
     <table style="table-layout:fixed" class="table table-striped table-songs col-sm">
         <thead>
             <tr>
-                <th scope="col" style="width:2em">
-                    @Html.DisplayNameFor(model => model.Summaries[0].Hits)
+                <th scope="col" style="width:3em">
+                    Hits
                 </th>
-                <th scope="col" style="width:12em">
-                    @Html.DisplayNameFor(model => model.Summaries[0].UsageId)
+                <th scope="col" style="width:3em">
+                    Users
                 </th>
-                <th scope="col" style="width:6em">
-                    @Html.DisplayNameFor(model => model.Summaries[0].UserName)
+                <th scope="col">
+                    Page
                 </th>
                 <th scope="col" style="width:2em">
                     Days
                 </th>
-                <th scope="col" style="width:8em">
-                    @Html.DisplayNameFor(model => model.Summaries[0].MinDate)
+                <th scope="col" style="width:10em">
+                    Min Date
                 </th>
-                <th scope="col" style="width:8em">
-                    @Html.DisplayNameFor(model => model.Summaries[0].MaxDate)
+                <th scope="col" style="width:10em">
+                    Max Date
                 </th>
             </tr>
         </thead>
-
+        <tbody>
         @foreach (var item in items)
         {
             <tr>
                 <td>@item.Hits</td>
-                <td>
-                    @if (!string.IsNullOrEmpty(item.UsageId))
+                <td>@item.UniqueUsers</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="@item.Page">
+                    @if (!string.IsNullOrEmpty(item.Page))
                     {
-                        @Html.ActionLink(item.UsageId, "IdLog", new
+                        @Html.ActionLink(item.Page, "PageLog", new
                             {
-                                usageId = item.UsageId
-                            })
-                    }
-                </td>
-                <td>
-                    @if (!string.IsNullOrEmpty(item.UserName) && item.UserName != "NULL")
-                    {
-                        @Html.ActionLink(item.UserName, "UserLog", new
-                            {
-                                user = item.UserName
+                                page = item.Page,
+                                exactMatch = !Model.UseBaseUrl
                             })
                     }
                 </td>
@@ -160,6 +133,7 @@
                 </td>
             </tr>
         }
+        </tbody>
     </table>
     </div>
 </div>
